[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Popov Nikita nikitqaa1901@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
requests ="^2.31.0"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
jinja2 = "^3.1.2"

[tool.poetry.group.linters.dependencies]
ruff = "^0.1.7"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["./migrations", "./tests"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint]
select = ["F", "E", "I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 100